Show account with withdrawals list, demo seed

--- a/src/App/UI/View/Default/index.html.twig
+++ b/src/App/UI/View/Default/index.html.twig
@@ -1,2 +1,11 @@
 {% extends "layout.html.twig" %}
 
+{% block h1 %}Welcome{% endblock %}
+
+{% block body %}
+    <div class="row">
+        <div class="col-12">
+            <a href="{{ url('account') }}">Go to account</a>
+        </div>
+    </div>
+{% endblock %}
