--- a/src/App/UI/View/layout.html.twig
+++ b/src/App/UI/View/layout.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}Withdrawals Manager{% endblock %}</title>
+    <title>{% block title %}Withdrawal Manager{% endblock %}</title>
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <h1>{% block h1 %}Please log in{% endblock %}</h1>
+    <h1>{% block h1 %}{% endblock %}</h1>
     {% block body %}{% endblock %}
 </div>
 
