Changed security engine

--- a/src/App/UI/View/Account/index.html.twig
+++ b/src/App/UI/View/Account/index.html.twig
@@ -24,7 +24,7 @@
     </div>
 
     <div class="row" style="margin-top: 2em;">
-        <a class="btn btn-primary">New withdrawal</a>
+        <a class="btn btn-primary" href="{{ url('account.new_withdrawal') }}">New withdrawal</a>
     </div>
 
 {% endblock %}
