Withdrawal use-case

--- a/src/App/UI/View/Account/index.html.twig
+++ b/src/App/UI/View/Account/index.html.twig
@@ -24,7 +24,9 @@
     </div>
 
     <div class="row" style="margin-top: 2em;">
-        <a class="btn btn-primary" href="{{ url('account.new_withdrawal') }}">New withdrawal</a>
+        <div class="col-12 text-right">
+            <a class="btn btn-primary" href="{{ url('account.new_withdrawal') }}">New Withdrawal</a>
+        </div>
     </div>
 
 {% endblock %}
